# FOA-SDK

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  SUPPORT.md  engine.json  o3de.lock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  foa-sdk-build-status.json  owner-build-trigger.txt
.github/ISSUE_TEMPLATE/: config.yml  tg_sdk_bug.yml  tg_sdk_research.yml
.github/remediation/: apply_candidate_evidence_repairs.py
.github/workflows/: apply-project-wide-security-repairs.yml  ar.yml  foa-sdk-enforce-and-build.yml  foa-sdk-failure-tail.yml  foa-sdk-fix-and-build.yml  foa-sdk-owner-build.yml  foa-sdk-owner-dispatch.yml  foa-sdk-run-monitor.yml  ios-build.yml  linux-build.yml  mac-build.yml  resolve-pr91-conflicts.yml  semantic-hook-offline.yml  (+6 more)
AutomatedTesting/: project.json
Gems/RecastNavigation/: CMakeLists.txt
Gems/RecastNavigation/Code/: CMakeLists.txt
Gems/RecastNavigation/Code/Source/: RecastNavigationSystemComponent.cpp
Gems/RecastNavigation/Code/Source/EditorComponents/: EditorDetourNavigationComponent.cpp  EditorRecastNavigationMeshComponent.cpp  EditorRecastNavigationPhysXProviderComponent.cpp
Installer/: README.md
TaintedGrailModdingEditor/: CMakeLists.txt  project.json
TaintedGrailModdingEditor/cmake/: EngineFinder.cmake
cmake/: 3rdParty.cmake  3rdPartyPackages.cmake  GeneralSettings.cmake  LYPython.cmake  LYWrappers.cmake  PatchIfNotAlreadyPatched.cmake  Policy.cmake  Subdirectories.cmake
python/: get_python.bat  get_python.sh  python.sh  requirements.txt
scripts/: o3de.py
(+1963 files in other folders)
